changes for exceeds

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div id="quote-box">
       <p class="quote"></p>
-      <p class="source"><span class="author">David Allen</span><span class="citation">Making It All Work</span><span class="year">2009</span>
+      <p class="source"><span class="author"></span><span class="citation"></span><span class="year"></span><span class="mood"></span>
       </p>
     </div>
     <button id="loadQuote">Show another quote</button>
